--- a/app/src/main/res/layout-land/fragment_show_profile.xml
+++ b/app/src/main/res/layout-land/fragment_show_profile.xml
@@ -140,7 +140,7 @@
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.6" />
 
-            <com.google.android.gms.maps.MapView
+            <com.example.myapplication.CustomMapView
                 android:id="@+id/userLocation"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
