--- a/app/src/main/res/layout-land/fragment_show_profile.xml
+++ b/app/src/main/res/layout-land/fragment_show_profile.xml
@@ -17,7 +17,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="2"
-        app:layout_constraintStart_toEndOf="@+id/profile_picture"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0">
 
@@ -77,6 +76,7 @@
                 android:id="@+id/textViewFullNameShowProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:autoSizeTextType="uniform"
                 android:text="@string/full_name"
                 android:textSize="24sp"
@@ -90,6 +90,7 @@
                 android:id="@+id/textViewUsernameShowProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:autoSizeTextType="uniform"
                 android:text="@string/username"
                 android:textSize="18sp"
@@ -101,6 +102,7 @@
                 android:id="@+id/textViewUserEmailShowProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:text="@string/email"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/textViewUserLocationShowProfile"
@@ -112,6 +114,7 @@
                 android:id="@+id/textViewUserLocationShowProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:text="@string/location"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
@@ -144,6 +147,7 @@
                 android:id="@+id/userLocation"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
