--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,13 +18,14 @@
 
         <item
             android:id="@+id/itemsOfInterestListFragment"
-            android:icon="@android:drawable/btn_star"
-            android:title="Favorite Items"
+            android:icon="@drawable/favorite_icon"
+            android:title="@string/fav"
             app:showAsAction="always" />
 
         <item
             android:id="@+id/itemBoughtFragment"
-            android:title="Bought Items"
+            android:title="@string/bought"
+            android:icon="@drawable/bought_icon"
             app:showAsAction="always"/>
 
         <item android:title="@string/logout"
